# kaleidoscope-internal

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: device.rs  driver.rs  key_addr.rs  key_defs.rs  lib.rs  matrix_addr.rs  plugins.rs
src/device/: avr.rs  key_indexes.rs
src/device/avr/: pins_and_ports.rs
src/driver/: bootloader.rs  keyscanner.rs
src/driver/bootloader/: avr.rs
src/driver/bootloader/avr/: caterina.rs
src/driver/keyscanner/: atmega.rs
src/key_addr/: atreus.rs  dummy.rs
src/key_defs/: consumer_control.rs  keyboard.rs  keymaps.rs
src/plugins/: atreus.rs
src/plugins/macros/: key_defs.rs
tests/: matrix_addr.rs
