[package]
name = "kaleidoscope-internal"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield = "0.14"
paste = "1.0"

[dependencies.usbd-hid]
# Switch to crates.io after next version release
git = "https://github.com/twitchyliquid64/usbd-hid"
version = "0.6"

[features]
avr = []
atmega32u4 = ["avr"]
atreus = ["atmega32u4"]
